@@ -30,6 +30,7 @@ A Chrome extension with tools and improvements for Hyperiums 7 (unofficial)
 - Information about deployed fleets
 - Coordinates for moving fleets
 - Count and display number of backup buddy logins
+- Link to forum on "last 20 messages" page (for alliances)
 
 ### Additional
 - Simple Fleet Calculator (Accessible via Military menu in game)
