@@ -1,6 +1,9 @@
 Bugfixes are not included in this changelog. See github:
 https://github.com/resident-uhlig/chrome-hyperiums7/issues
 
+XXXX-XX-XX XX:XX:XX Version X.X.X
+* Added link to forum on "last 20 messages" page (for alliances)
+
 2013-12-12 20:25:00 Version 0.1.1
 * Bug fixes only
 
